GNOME Bugzilla – Bug 726167
.linked class is set on toolbar buttons instead of their container
Last modified: 2014-03-13 13:04:49 UTC
According to gtk's documentation, GTK_STYLE_CLASS_LINKED has to be set on the surrounding container instead of on the widgets that should be linked. Also move setting the style classes for toolbar buttons into the .ui file.
Created attachment 271590 [details] [review] Move .linked class from buttons to their container
pushed as commit ec3f68b; thanks.