Move .linked class from buttons to their container

According to gtk's documentation, GTK_STYLE_CLASS_LINKED has to be set
on the surrounding container instead of on the widgets that should be
linked.

Also move setting the style classes for toolbar buttons into the .ui
file.

https://bugzilla.gnome.org/show_bug.cgi?id=726167